# stm32imu-test

./: .gitignore  .gitmodules  README.md  add_submodules.sh
docker/: esp32imu.sh  esp32imu.yml  lib_coloration.sh
docker/nginx/: default.conf
docs/: README.txt  mkdocs.yml
esp32ahrs/: README.md
esp32ahrs/components/bluetooth/: bluetooth.c
esp32ahrs/components/bluetooth/include/: bluetooth.h
esp32ahrs/components/common/: CMakeLists.txt  README.txt  uvarint.c
esp32ahrs/components/config/include/: config.h  config_i2c.h
esp32ahrs/components/data/: AHRS_data.c  CMakeLists.txt  IMU_data.c  accelerometer_data.c  ble_data.c  gyroscope_data.c  magnetometer_data.c  ringbuffer_pool_sample.c  ringbuffer_zerro_copy_sample.c  ws_msg_ringbuf.c
esp32ahrs/components/data/include/: AHRS_data.h  IMU_data.h  accelerometer_data.h  ble_data.h  common_data.h  gyroscope_data.h  magnetometer_data.h  ws_msg_ringbuf.h
esp32ahrs/components/drivers/MPU6050/: CMakeLists.txt  MPU6050.c  mpu6050_test.c
esp32ahrs/components/drivers/i2c/: CMakeLists.txt  i2c.c  i2c_devices.c
esp32ahrs/components/drivers/i2c/include/: i2c_device_private.h  i2c_devices.h
esp32ahrs/components/msp/: CMakeLists.txt  msp.c
esp32ahrs/components/msp/include/: msp.h
esp32ahrs/components/msp_inav/: CMakeLists.txt  README.txt  msp.c
esp32ahrs/components/msp_inav/include/: msp.h
esp32ahrs/components/webserver/: webserver.c
esp32ahrs/main/: CMakeLists.txt  main.c
esp32ahrs/web/backend/: server.js
esp32ahrs/web/frontend/src/components/views/charts/: GyroView.vue
esp32ahrs/web/frontend/src/components/views/charts/js/: 3DView_v2.js
esp32imu/: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  partitions_littlefs.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp32imu/components/cjson/: CMakeLists.txt  README.txt
esp32imu/components/config/: CMakeLists.txt
esp32imu/components/config/include/: .gitignore  config.h  config_fs.h  config_i2c.h  config_wifi.h
esp32imu/components/drivers/AL/include/: al_sensor.h
esp32imu/components/drivers/MPU6050/: CMakeLists.txt  MPU6050.c  README.md  mpu6050_test.c
esp32imu/components/drivers/MPU6050/include/: MPU6050.h  mpu6050_test.h
esp32imu/components/drivers/i2c/: i2c.c  i2c_devices.c
esp32imu/components/drivers/i2c/include/: i2c_device.h  i2c_device_private.h  i2c_devices.h
esp32imu/components/fs/: CMakeLists.txt  fs.c  littlefs.c  spiffs.c
esp32imu/components/fs/include/: fs.h  littlefs.h  spiffs.h
esp32imu/components/webserver/: CMakeLists.txt  webserver.c
esp32imu/components/webserver/include/: webserver.h
esp32imu/components/wifi/: CMakeLists.txt  wifi.c
esp32imu/components/wifi/include/: wifi.h
esp32imu/frontend/: index.html  index2.html  package-lock.json  package.json  vite.config.js
esp32imu/frontend/back_imitator/: server.js
esp32imu/frontend/src/: index.html
esp32imu/frontend/src/js/: main.js
esp32imu/main/: CMakeLists.txt  idf_component.yml  main.c
esp32imu/not_working/MPU6000/: CMakeLists.txt  MPU6000.c  MPU6000.h  MPU6000_spi.c  calibrate_mpu.c
esp32imu/not_working/fusion/: madgwick.c
esp32imu/not_working/i2c_task/: i2c.c
esp32imu/not_working/imu/: imu.c  imu.h
esp32imu/not_working/logger/: logger.c
esp32imu/not_working/madgwick/: madgwick.c  madgwick.h
esp32imu/not_working/processing_task/: processing_task.c
esp32imu/not_working/sensors/: sensors.c
esp32imu/not_working/ws_server_task/: CMakeLists.txt  ws_server.c  ws_server.h
esp32imu/web/: README.md  package-lock.json  package.json  vite.config.js
esp32imu/web/backend/: server.js
esp32imu/web/frontend/: index.html
esp32imu/web/frontend/css/: style.css
esp32imu/web/frontend/js/: 3DView.js  chartHandler.js  main.js  tableHandler.js  websocketHandler.js
